Make it download also raw video files

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 body {
-    background-image: url("images/back.jpg");
+    background-image: url("../images/back.jpg");
     background-attachment: fixed;
+}
+
+.main-body{
+    padding-top: 30px;
 }
